--- a/src/Wei.Service/Wei.Service.csproj
+++ b/src/Wei.Service/Wei.Service.csproj
@@ -11,7 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="TinyMapper" Version="3.0.3" />
-    <PackageReference Include="Wei.Repository" Version="1.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Wei.Repository\src\Wei.Repository\Wei.Repository.csproj" />
   </ItemGroup>
 
 </Project>
